# substrata

./: .readthedocs.yml  README.md  environment.yml  pyproject.toml  setup.cfg
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/notebooks/: command_line_usage.ipynb  geometry.ipynb  getting_started.ipynb  test.ply
example_data/cur_sna_20m_20200303/: cur_sna_20m_20200303.cams.xml  cur_sna_20m_20200303.meta.json  cur_sna_20m_20200303_ann.csv  cur_sna_20m_20200303_dec1M.ply  cur_sna_20m_20200303_markers.csv
example_data/cur_sna_20m_20230414/: cur_sna_20m_20230414_dec1M.ply
src/substrata/: __init__.py  annotations.py  cameras.py  classification.py  cli.py  geometry.py  logging.py  measurements.py  pointclouds.py  segmentation.py  settings.py  visualizations.py
src/substrata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
