[flake8]
max-line-length = 88
extend-ignore = D100, D104
select = C,E,F,W,D

[doc8]
convention = google

[metadata]
name = substrata
version = 0.1.0        # keep in sync with pyproject.toml
description = Utilities for 3-D geometry and point-cloud handling
long_description = file: README.md
long_description_content_type = text/markdown
author = Reefscape Genomics Lab
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.22

[options.packages.find]
where = src